# kleinanzeigen-mcp

./: .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  CODE_IMPROVEMENTS.md  README.md  claude_desktop_config.json  claude_desktop_config_uv.json  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  test_all_tools.py  test_improvements.py  test_locations_manual.py
scripts/: lint.sh
src/kleinanzeigen_mcp/: __init__.py  __main__.py  client.py  config.py  constants.py  models.py  rate_limiter.py  server.py  utils.py  validators.py
tests/: test_categories.py  test_config.py  test_corrected_endpoints.py  test_detailed_api.py  test_docs_endpoint.py  test_final_fix.py  test_get_listing_details.py  test_locations.py  test_mcp_server.py  test_rate_limiter.py  test_search_listings.py  test_utils.py  test_validators.py  test_various_ids.py
